--- a/ioteca_web/app/views/test1.html
+++ b/ioteca_web/app/views/test1.html
@@ -2,4 +2,11 @@
 		<input type="text" ng-model="nombre">
 		{{ nombre }}
 		<button ng-click="save()">Save</button>
+
+		<table>
+			<tr ng-repeat="d in lista | filter:nombre">
+				<td> {{ d.nombre }}</td>
+				<td> {{ d.codigo }}</td>
+			</tr>
+		</table>
 	</div>
